# solo-interview-project-1

./: .dockerignore  .gitignore  DEVELOPMENT_PLAN.md  Dockerfile  README.md  TechAsignements_AI_back_dev_21062025.txt  docker-compose.yml  main.py  pyproject.toml
app/: config.py  hf_client.py  main.py
app/api/: __init__.py  ask.py  chats.py  deps.py  documents.py  router.py  schemas.py
app/extraction/: __init__.py  exceptions.py  extractor.py  ocr.py  pdf.py  url.py
app/ner/: __init__.py  pipeline.py
app/qa/: __init__.py  pipeline.py  preload.py
app/storage/: __init__.py  chat_repository.py  db.py  exceptions.py  session_store.py
benchmark/: README.md  questions.json  results.csv  run_benchmark.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  ChatHeader.jsx  ChatSidebar.jsx  DocumentSidebar.jsx  InputArea.jsx  MessageList.jsx  Toast.jsx  UploadModal.jsx  api.js  index.css
plans/: comprehensive_pytest_test_suite_3c03307d.plan.md  phase_1_project_scaffold_b9cbaf07.plan.md  phase_2_document_extraction_6073692c.plan.md  phase_3_storage_layer_2f3ccae9.plan.md  phase_4_qa_pipeline_406aa8a8.plan.md  phase_5_api_endpoints_5ac943c1.plan.md  phase_6_docker_b6e02009.plan.md  phase_7_polish_readme_ca8539d9.plan.md
scripts/: generate_test_docs.py  validate_all.py  validate_extraction.py  validate_qa.py  validate_storage.py
tests/: conftest.py
tests/integration/: test_api.py  test_extraction_real.py  test_qa_real.py  test_static.py
tests/unit/: test_extraction.py  test_ner_pipeline.py  test_qa_pipeline.py  test_schemas.py  test_storage.py
